10.5.0 (Sep 12, 2025)
- Changed the log level from error to debug when renewing the token for Streaming service in asyncio mode.
- Added new configuration for Fallback Treatments, which allows setting a treatment value and optional config to be returned in place of "control", either globally or by flag. Read more in our docs.

10.4.0 (Aug 4, 2025)
- Added a new optional argument to the client `getTreatment` methods to allow passing additional evaluation options, such as a map of properties to append to the generated impressions sent to Split backend. Read more in our docs.

10.3.0 (Jun 17, 2025)
- Added support for rule-based segments. These segments determine membership at runtime by evaluating their configured rules against the user attributes provided to the SDK.
- Added support for feature flag prerequisites. This allows customers to define dependency conditions between flags, which are evaluated before any allowlists or targeting rules.

10.2.0 (Jan 17, 2025)
- Added support for the new impressions tracking toggle available on feature flags, both respecting the setting and including the new field being returned on SplitView type objects. Read more in our docs.

10.1.0 (Aug 7, 2024)
- Added support for Kerberos authentication in Spnego and Proxy Kerberos server instances.

10.0.1 (Jun 28, 2024)
- Fixed failure to load lib issue in SDK startup for Python versions higher than or equal to 3.10

10.0.0 (Jun 27, 2024)
- Added support for asyncio library
- BREAKING CHANGE: Minimum supported Python version is 3.7.16

9.7.0 (May 15, 2024)
- Added support for targeting rules based on semantic versions (https://semver.org/).
- Added the logic to handle correctly when the SDK receives an unsupported Matcher type.

9.6.2 (Apr 5, 2024)
- Fixed an issue when pushing unique keys tracker data to redis if no keys exist, i.e. get_treatment flavors are not called.

9.6.1 (Feb 15, 2024)