@@ -1,6 +1,7 @@
 10.5.0 (Sep 12, 2025)
 - Changed the log level from error to debug when renewing the token for Streaming service in asyncio mode.
 - Added new configuration for Fallback Treatments, which allows setting a treatment value and optional config to be returned in place of "control", either globally or by flag. Read more in our docs.
+- Deprecated config parameter `redisErrors` as it is removed in redis lib since 6.0.0 version (https://github.com/redis/redis-py/releases/tag/v6.0.0).
 
 10.4.0 (Aug 4, 2025)
 - Added a new optional argument to the client `getTreatment` methods to allow passing additional evaluation options, such as a map of properties to append to the generated impressions sent to Split backend. Read more in our docs.
